[build-system]
requires = ["poetry-core>=1.1.0", "pandas"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "retsim"
version = "0.1.0"
description = "Retirement simulation tool"
authors = ["mhuntt"]

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here
